[project]
name = "pulumi-events"
version = "0.1.0"
description = "MCP server for managing events on Meetup.com (and later Luma) via AI assistants"
readme = "README.md"
authors = [{ name = "Engin Diri", email = "engin.diri@ediri.de" }]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.2",
    "httpx>=0.28",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
pulumi-events = "pulumi_events.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pulumi_events"]

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "A", "C4",
    "SIM", "RUF", "ANN", "ASYNC", "S", "PTH",
]
ignore = [
    "ANN101", "ANN102",
    "ANN401",   # Any in **kwargs — unavoidable for protocol / provider APIs
    "B008",     # Depends() in defaults — standard FastMCP pattern
    "S603",     # subprocess calls — needed for Pulumi ESC
    "S607",     # partial executable path — "pulumi" CLI
]

[tool.ruff.lint.isort]
known-first-party = ["pulumi_events"]
